# lettuce-inspector

./: .gitignore  README.md  example_output.json  pyproject.toml  results.json
components/: embeddings.py  models.py
evaluation/: eval_data_loaders.py  metrics.py  pipelines.py
evaluation/datasets/: bigger_example.csv  example.csv
evaluation/lettuce_inspector/: __init__.py
examples/: compare-llms.py  test_rag_pipeline.py
omop/: omop_models.py  omop_queries.py
options/: pipeline_options.py
