[project]
name = "lettuce-inspector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.5",
    "llama-cpp-python>=0.3.6",
    "polars>=1.19.0",
    "rapidfuzz>=3.11.0",
    "sentence-transformers>=3.3.1",
    "sqlalchemy>=2.0.37",
]
